feat: add css button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <input type="password" name="pass" id="pass" placeholder="Senha" required/>
           </div>
             <button type="submit">Entrar</button>
-            
+          <div>
+            <a href="#" target="_blank">Esqueceu a Senha?</a>
+            </div>
         </form>
       </div>
     </div>
